Dictionary/Resources/styles.css
@charset "UTF-8";
@namespace d url(http://www.apple.com/DTDs/DictionaryService-1.0.rng);

@font-face {
  font-family: "Gentium";
  font-style: normal;
  font-weight: normal;
  src: url(GentiumPlus-R.ttf)
}

@font-face {
  font-family: "Gentium";
  font-style: italic;
  font-weight: normal;
  src: url(GentiumPlus-I.ttf)
}

@font-face {
  font-family: "Gentium";
  font-style: normal;
  font-weight: bold;
  src: url(GenBasB.ttf)
}

@font-face {
  font-family: "GentiumSMCP";
  font-style: normal;
  font-weight: normal;
  src: url(GentiumPlus-R-smcp.woff)
}

@font-face {
  font-family: "GentiumSMCP";
  font-style: italic;
  font-weight: normal;
  src: url(GentiumPlus-I-smcp.woff)
}

body {
  line-height: 1.3;
}

body, .block {
  font-family: Gentium;
}

div {
  display: inline;
}

.hw {
  font-size: 134%;
  font-weight: bold;
  color: maroon;
  margin-bottom: -3px;
  display: inline;
  line-height: 0.85;
}

.col {
  font-size: 90%;
  font-weight: 600;
}

.cd {
  font-size: 95%;
  word-spacing: -0.5px;
}

.rj {
  text-align: right;
}

.q + .rj {
  display: block;

}

.qau:before, .au:before {
  content: "– ";
}

*+.hw:before {
  content: "\A\A\A\A";
  white-space:pre;
}

.q+.hw:before {
  content: "\A";
}

.sn:before, .sd:before, .note:before, .def + .cs:before {
  content: "\A";
  white-space:pre;
}

.q + .sn:before, .cs .sd:before, .q + .sd:before, .def .sn:before, .def .sd:before  {
  content:"";
  white-space:initial;
}

.au, .qau {
  font-size: 90%;
}


.xex, .it, .title, .stype, .part, .parts, .membof, .member,
.members, .corr, .qperson, .prod, .prodmac, .stage, .stageof,
.inv, .methodfor, .examp, .stage, .unit, .uses, .usedby, .perf,
.recipr, .sig, .wns, .w16ns, .abbr, .altname, .altnpluf, .ets,
.etsep, .ex, .pos, .qau, .qex, .sd, .ship, .source, .pluf,
.uex, .isa, .mathex, .ratio, .singf, .xlati, .tran, .tr,
.iref, .figref, .ptcl, .mark, .fld  {
  font-style: italic;
}

.q {
  font-size: 86%;
  line-height: 1.3;
  margin: 5px 15px 5px 35px;
  display: block;
}

.sn {
  font-weight:bold;
  font-size: 105%
}

.adjf, .conj, .decf, .er, .plw, .singw, .u, .plw {
  font-family: 'GentiumSMCP';
}

@supports(font-feature-settings: 'smcp') {
    .adjf, .conj, .decf, .er, .plw, .singw, .u, .plw {
        font-family: inherit
        font-variant: normal;
        font-feature-settings: 'smcp';
    }
}

html {
  /* There is a style="background: white" on the html element we have to beat */
  background: none !important;
}

@media (prefers-dark-interface) {
  .hw {
    /* blue is more readable on the dark background than maroon */
    color: -webkit-link;
  }
  img {
    filter: invert(100%);
  }
}

